# bcmd-zkp-tutorial

./: .gitignore  README.md
rust-prover/: Cargo.toml  README.md  abi.json  run_main.sh
rust-prover/src/: main.rs
rust-prover/src/data_structures/: circuit.rs  credential.rs  mod.rs
rust-prover/src/entities/: holder.rs  issuer.rs  verifier.rs
rust-prover/src/utils/: mod.rs  utils.rs
rust-prover/src/utils/solidity/: mod.rs  sw.rs  te.rs
solidity-verifier/: Groth16VerifyBn254.sol  README.md  hardhat.config.cjs  package-lock.json  package.json
solidity-verifier/contracts/: Groth16VerifyBn254.sol  Pairing.sol
solidity-verifier/scripts/: deploy_verifier.js  verify_proof.js
solidity-verifier/test/: verify_proof.test.js
