[package]
name = "rust-prover"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bn254 = "0.4.0"
ark-crypto-primitives = { version = "0.4.0", default-features = true, features = ["r1cs", "crh"] }
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-groth16 = "0.4.0"
ark-poly = "0.4.2"
ark-r1cs-std = "0.4.0"
ark-relations = "0.4.0"
ark-serialize = "0.4.2"
ark-std = "0.4.0"
rand = "0.8.5"
num-bigint = "0.4.6"
ark-sponge = { version = "0.4.0-alpha" }

[features]
print-trace = [ "ark-std/print-trace" ]
